# qwen

./: .gitignore  README.md  VLM_STAGE1_SUMMARY.md  claude_plan.md  pyproject.toml  requirements.txt
benchmark/: benchmark_h200.py  results.md
cloud/: README.md  modal_train.py
examples/: experiment_baseline.py  experiment_layers.py  replay_policy.py  run_episode.py
realtime/: README.md  __init__.py  client.py  client_test_mac.py  client_v0.py  dev_loopback.py  msgpack_numpy.py  server.py  ws_server.py
src/streaming_qwen_vlm/: __init__.py  backbone.py  config.py  early_exit.py  expert.py  fast_tokens.py  flow.py  frame_buffer.py  llm_forward.py  model.py  normalize.py  outputs.py  policy.py  preprocess.py  prompt_builder.py  state_encoder.py  state_text.py  timing.py  vision_cache.py  vla.py
src/streaming_qwen_vlm/training/: checkpoints.py  config.py  dataset.py  evaluate.py  train.py
tests/: conftest.py  test_cached_injection_equivalence.py  test_dataloader_streaming_parity.py  test_early_exit_equivalence.py  test_expert_attention.py  test_expert_init.py  test_fast_roundtrip.py  test_front_padding.py  test_kv_export_equivalence.py  test_output_shape.py  test_single_logical_video.py  test_sliding_window.py  test_vision_cache_equivalence.py
